# CosyVoice-Update

./: pyproject.toml
