[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project"
version = "0.1.0"
description = "Example project with dependencies"
authors = [{ name = "Christopher" }]
dependencies = [
    "conformer==0.3.2",
    "deepspeed==0.15.1; sys_platform == 'linux'",
    "diffusers==0.29.0",
    "fastapi",
    "fastapi-cli==0.0.4",
    "gdown==5.1.0",
    "gradio==5.4.0",
    "grpcio>=1.57.0",
    "grpcio-tools>=1.57.0",
    "hydra-core==1.3.2",
    "HyperPyYAML==1.2.2",
    "inflect==7.3.1",
    "librosa==0.10.2",
    "lightning==2.2.4",
    "matplotlib==3.7.5",
    "modelscope==1.20.0",
    "networkx==3.1",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "onnx",
    "onnxruntime-gpu==1.18.0; sys_platform == 'linux'",
    "onnxruntime==1.18.0; sys_platform == 'darwin' or sys_platform == 'win32'",
    "openai-whisper==20231117",
    "protobuf",
    "pyarrow==18.1.0",
    "pydantic>=2.7.0",
    "pyworld==0.3.4",
    "rich==13.7.1",
    "soundfile==0.12.1",
    "tensorboard==2.14.0",
    "tensorrt-cu12==10.13.3.9; sys_platform == 'linux'",
    "tensorrt-cu12-bindings==10.13.3.9; sys_platform == 'linux'",
    "tensorrt-cu12-libs==10.13.3.9; sys_platform == 'linux'",
    "torch",
    "torchaudio",
    "transformers",
    "x-transformers==2.11.24",
    "uvicorn",
    "wetext==0.0.4",
    "wget==3.2"
]

[tool.pip]
extra-index-url = [
    "https://download.pytorch.org/whl/cu121",
    "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
]
